--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,24 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "^/components/*": [
+        "./components/*"
+      ],
+      "^/assets/*": [
+        "./assets/*"
+      ],
+      "^/elements/*": [
+        "./elements/*"
+      ],
+      "^/shared/*": [
+        "./shared/*"
+      ]
+    }
   },
   "include": [
     "src"
-  ]
+  ],
 }
